tests/ui/feature-gates/feature-gate-return_type_notation.no.stderr
error[E0658]: return type notation is experimental
  --> $DIR/feature-gate-return_type_notation.rs:10:18
   |
LL | fn foo<T: Trait<m(..): Send>>() {}
   |                  ^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = help: add `#![feature(return_type_notation)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
